Fix the layout issue of the route search panel in Firefox

--- a/src/css/mini-tokyo-3d.css
+++ b/src/css/mini-tokyo-3d.css
@@ -540,7 +540,7 @@
     width: 220px;
     height: 26px;
     padding: 1px;
-    font-size: 16px;
+    font-size: 15.6px;
     border: 1px solid #777;
     border-radius: 0;
     outline: none;
@@ -565,7 +565,7 @@
     background-color: transparent;
     color: #fff;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 15.6px;
 }
 .mini-tokyo-3d .search-select:hover {
     background-color: rgba(51, 51, 51, 0.7);
@@ -583,7 +583,7 @@
     background-color: transparent;
     color: #fff;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 15.6px;
 }
 .mini-tokyo-3d .search-button:hover {
     background-color: rgba(51, 51, 51, 0.7);
@@ -681,21 +681,6 @@
 }
 .mini-tokyo-3d .mapboxgl-popup-anchor-right.highlighted .mapboxgl-popup-tip {
     border-left-color: rgba(102, 102, 102, 0.7);
-}
-.mini-tokyo-3d #search-box {
-    top: 25px;
-    right: 144px;
-    width: 200px;
-    height: 22px;
-    transform: translate(50%, -50%);
-    font-size: 16px;
-    border: none;
-    outline: none;
-    background-color: rgba(255, 255, 255, 0);
-    opacity: 0;
-    display: none;
-    position: absolute;
-    z-index: 3;
 }
 .mini-tokyo-3d .desc-header {
     display: table;
